--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,31 @@
-asgiref==3.7.2
-blinker==1.7.0
+asgiref==3.8.1
 Brotli==1.1.0
-capstone==5.0.1
-certifi==2023.7.22
-charset-normalizer==3.3.1
-click==8.1.7
-colorama==0.4.6
-distlib==0.3.8
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.7
+dataclasses==0.6
 dj-database-url==2.1.0
-Django==4.1.13
-django-admin-interface==0.27.0
-django-colorfield==0.11.0
-django-cors-headers==4.3.1
-djangorestframework==3.14.0
-djongo==1.3.6
-dnspython==2.4.2
-filelock==3.13.4
-Flask==3.0.0
+Django==5.0.6
+django-admin-tools==0.9.3
+django-appconf==1.0.6
+django-avatar==8.0.0
+django-mongodb-engine==0.6.0
+django-recaptcha==4.0.0
+djangotoolbox==1.8.0
+djongo==1.2.31
+dnspython==2.6.1
 gunicorn==22.0.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-leechcorepyc==2.16.5
-MarkupSafe==2.1.3
-mysqlclient==2.2.0
+idna==3.7
 packaging==24.0
-pefile==2023.2.7
-Pillow==10.1.0
-platformdirs==4.2.0
+pillow==10.3.0
 psycopg2-binary==2.9.9
-pycryptodome==3.19.0
-pymongo==4.5.0
-python-slugify==8.0.1
-pytz==2023.3.post1
-requests==2.31.0
-schedule==1.2.1
-sqlparse==0.2.4
-text-unidecode==1.3
+pycparser==2.22
+pymongo==4.7.2
+python-dotenv==1.0.1
+requests==2.32.2
+sqlparse==0.5.0
 typing_extensions==4.12.0
-tzdata==2023.3
-urllib3==2.0.7
-virtualenv==20.25.1
-Werkzeug==3.0.1
+tzdata==2024.1
+urllib3==2.2.1
 whitenoise==6.6.0
-yara-python==4.3.1
